spacing in navbar fixed

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -38,6 +38,7 @@ nav {
   color: #F76F9A;
   font-family: 'Hind', sans-serif;
 }
+
 a {
   color: #FFDAD8;
 }
@@ -46,7 +47,7 @@ a:hover {
 }
 a.active {
   color: #F76F9A;
-  /*background-color: #FFDAD8;*/
+  background-color: #FFDAD8;
 }
 /*About Section*/
 img.biopic {
